# paperview-rs

./: .envrc  Cargo.toml  README.md  change-wallpaper.sh  convert.sh  flake.nix  paperview-rs  random.sh  rustfmt.toml
.cargo/: config.toml
imlib-rs/: Cargo.toml  build.rs
src/: bitmap.rs  main.rs  models.rs  monitor.rs  render.rs
src/tui/: display.rs  mod.rs  path.rs  screen.rs
