[package]
name = "paperview-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
display-info = "0.5.2"
env_logger = "0.11.5"
futures = "0.3.31"
image = "0.25.5"
imlib-rs = { version = "0.1.3", git = "https://github.com/eatmynerds/imlib-rs" }
log = "0.4.22"
rayon = "1.10.0"
x11 = { version = "2.21.0", features = ["xlib"] }
